# sph

./: Makefile  Makefile.am  System.c  System.h  configure.ac  derivatives.c  derivatives.h  inoutflow.c  input.c  input.h  inputbp.c  inputbp.h  output.c  output.h  param.h  parameterfile.c  parameterfile.h  sph.c
src/: Makefile  Makefile.am  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.in  System.c  System.c~  System.h  derivatives.c  inoutflow.c  inoutflow.h  input.c  inputbp.c  inputbp.h  libSPH.la  libSPH_la-System.lo  libSPH_la-derivatives.lo  libSPH_la-inoutflow.lo  libSPH_la-input.lo  libSPH_la-inputbp.lo  libSPH_la-output.lo  libSPH_la-parameterfile.lo  output.c  parameterfile.c
src/lib/.deps/: libSPH_la-System.Plo  libSPH_la-derivatives.Plo  libSPH_la-inoutflow.Plo  libSPH_la-input.Plo  libSPH_la-inputbp.Plo  libSPH_la-output.Plo  libSPH_la-parameterfile.Plo
src/lib/.libs/: libSPH.la  libSPH.lai
src/lib/deplib/CPU/: brute.c  defs.h  rbc.c  rbc.h
